# rust-webservice-template

./: .env.in  Cargo.toml  Makefile  README.md  cargo-generate.toml  config.yaml  dc.dhall  justfile  log4rs.yml  service.dhall
.github/workflows/: email-on-push.yml
src/: config.rs  main.rs  postgres.rs  status.rs
