[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Jonas Collberg <jonas.collberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.19"
config = "0.10.1"
json = "0.12.4"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.2", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"]
